# typeoff

./: .gitignore  ARCHITECTURE.md  PLAN_MODES.md  README.md  TODO.md
.github/workflows/: build.yml
apple/: BUILD_PLAN.md  project.yml
apple/Typeoff/: Info.plist
apple/Typeoff.xcodeproj/: project.pbxproj
apple/Typeoff.xcodeproj/project.xcworkspace/xcuserdata/chenbao.xcuserdatad/: UserInterfaceState.xcuserstate
apple/Typeoff.xcodeproj/xcshareddata/xcschemes/: Typeoff.xcscheme
apple/Typeoff.xcodeproj/xcuserdata/chenbao.xcuserdatad/xcschemes/: xcschememanagement.plist
apple/Typeoff/Resources/WhisperKitModels/openai_whisper-base/: config.json
apple/Typeoff/Resources/WhisperModels/whisper-base/TextDecoder.mlpackage/: Manifest.json
apple/Typeoff/Resources/WhisperModels/whisper-base/TextDecoder.mlpackage/Data/com.apple.CoreML/: model.mlmodel
apple/Typeoff/Sources/App/: NotesView.swift  OnboardingView.swift  ProfileView.swift  SettingsView.swift  Theme.swift  TypeoffApp.swift
apple/Typeoff/Sources/Engine/: AudioPreprocessor.swift  AudioRecorder.swift  MelSpectrogram.swift  ModelDownloader.swift  SilenceDetector.swift  TranscriptionSession.swift  WhisperEngine.swift  WhisperPipeline.swift  WhisperTokenizer.swift
apple/Typeoff/Sources/Keyboard/: KeyboardView.swift  KeyboardViewController.swift
apple/Typeoff/Sources/Store/: TrialManager.swift
desktop/: requirements-mac.txt  run.bat  setup.bat  setup.sh
desktop/backends/: faster_backend.py
desktop/engine/: paster.py  recorder.py  streamer.py  vad.py
python/: requirements-win.txt  typeoff.py
python/archive/: typeoff_cli.py  typeoff_gui.py
python/backends/: __init__.py  faster_backend.py  mlx_backend.py
python/engine/: audio_filter.py  corrector.py  fillers.py  recorder.py  streamer.py  vad.py
python/ui/: index.html  mini.html
rs/: Cargo.toml  cargo-tauri-release-vsdev.cmd
rs/src/: audio_filter.rs  config.rs  corrector.rs  fillers.rs  hotkey.rs  lib.rs  main.rs  paster.rs  recorder.rs  streamer.rs  transcriber.rs  vad.rs
rs/src-tauri/: Cargo.toml  tauri.conf.json
rs/src-tauri/capabilities/: default.json
rs/src-tauri/src/: lib.rs  main.rs
rs/ui/: index.html
