[package]
name = "typeoff-app"
version = "0.2.0"
edition = "2021"
description = "Typeoff desktop app — Tauri frontend"

[dependencies]
typeoff = { path = ".." }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
